Update to separate in single tests the Java 21 features